# score-addon-stdIO

./: CMakeLists.txt  README.md  addon.json  init.sh  ping.qml  release.sh  score_addon_my_device.cpp  score_addon_my_device.hpp  score_addon_score-addon-unix-shell.cpp  score_addon_score-addon-unix-shell.hpp  score_addon_stdIO.cpp  score_addon_stdIO.hpp  score_addon_unix_shell.cpp  score_addon_unix_shell.hpp
.github/workflows/: jit.yml
MyDevice/: Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp
score-addon-stdIO/: Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp  stdIO_protocol.cpp  stdIO_protocol.hpp
score-addon-unix-shell/: Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp  shell_protocol.cpp  shell_protocol.hpp
